@@ -1,0 +1,9 @@
+\begin{theindex}
+
+  \item bar, 1--3, c, d, i, l, m, v, x, I, V, X, L, C, D, M
+
+  \indexspace
+
+  \item foo, i, v, x, l, c, d, m, 1--3, C, D, I, L, M, V, X
+
+\end{theindex}
