@@ -1,0 +1,9 @@
+\begin{theindex}
+
+  \item bar, i, v, x, l, c, d, m, 1--3, I, V, X, L, C, D, M
+
+  \indexspace
+
+  \item foo, i, v, x, l, c, d, m, 1--3, I, V, X, L, C, D, M
+
+\end{theindex}
